--- a/app.json
+++ b/app.json
@@ -23,11 +23,14 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./uber_assets/assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      ["expo-router",{
+        "origin" : "https://uber.com/"
+      }]
+      
     ],
     "experiments": {
       "typedRoutes": true
