--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@neondatabase/serverless": "^0.9.5",
     "@react-navigation/native": "^6.0.2",
+    "dateformat": "^5.0.3",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
