--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/clerk-expo": "^2.2.10",
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@neondatabase/serverless": "^0.9.5",
     "@react-navigation/native": "^6.0.2",
     "dateformat": "^5.0.3",
